# ShapeOfSound

./: .gitignore
runtime/binding/python/decoder/: params.h
runtime/core/: CMakeLists.txt
runtime/core/SOSForWindows/: BufferUtil.cpp  BufferUtil.h  CMakeLists.txt  MySock.cpp  MySock.h  PredictThread.cpp  PredictThread.h  SOSForWindows.aps  SOSForWindows.cpp  SOSForWindows.h  SOSForWindows.qrc  SOSForWindows.vcxproj.filters  SetUp.cpp  SetUp.h  SetUp.ui  audiostream.cpp  audiostream.h  base64.cpp  base64.h  capturethread.cpp  capturethread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_PredictThread.cpp  moc_capturethread.cpp  moc_sosforwindows.cpp  mydb.cpp  mydb.h  mymd5.cpp  mymd5.h  rsa_a.cpp  rsa_a.h  sosforwindows.ui
runtime/core/web/static/js/recorder/extensions/: lib.fft.js
runtime/server/x86/utils/: flags.h
runtime/temp/SOSForWindows/: CMakeLists.txt  PredictThread.cpp  PredictThread.h  SOSForWindows.qrc  SOSForWindows.vcxproj  audiostream.cpp  audiostream.h  capturethread.cpp  capturethread.h  main.cpp  sosforwindows.cpp  sosforwindows.h
runtime/temp/model/: train.yaml
runtime/temp/web/static/js/recorder/: recorder-core.js
runtime/temp/web/static/js/recorder/engine/: pcm.js
runtime/temp/web/static/js/recorder/extensions/: frequency.histogram.view.js
